--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="logo.jpg" /> -->
+  <link rel="icon" type="image/x-icon" href="logo.ico" className="w-10 h-10"/>
   <link href="/src/index.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WISDOM SCHOOL MUSANZE</title>
+  <title>Wisdom School Rwanda</title>
 </head>
 
 <body>
